--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
         <img src="a.jpg" style="width: 40%;" />
       </div>
 
-      <div
-        class="container content center padding-16"
-        style="max-width: 800px;"
-      >
+      <div class="container content center padding-5" style="max-width: 800px;">
         <h2 class="wide">A.N.M. Afridi Haque</h2>
         <p class="opacity"><i>Student</i></p>
         <div class="x container xlarge">
@@ -54,7 +51,7 @@
       </div>
 
       <div
-        class="container content padding-6"
+        class="container content padding-5"
         style="max-width: 800px;"
         id="contact"
       >
