--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
           <div class="col m6 large margin-botom">
             <i class="fa fa-map-marker" style="width: 30px;"></i> Dhaka,
             Bangladesh<br />
-            <i class="fa fa-phone" style="width: 30px;"></i> Phone:
-            01521103354<br />
-            <i class="fa fa-envelope" style="width: 30px;"> </i> Email:
+            <i class="fa fa-envelope" style="width: 30px;"></i>
+            nayem.shanto@gmail.com<br />
+            <i class="fa fa-envelope" style="width: 30px;"> </i>
             haque1709048@stud.kuet.ac.bd<br />
           </div>
         </div>
