--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="https://www.instagram.com/_a_afridi_/">
             <i class="fa fa-instagram hover-opacity"></i
           ></a>
-          <a href="https://accounts.snapchat.com/accounts/snapcodes">
+          <a href="https://www.snapchat.com/add/ahshanto">
             <i class="fa fa-snapchat hover-opacity"></i
           ></a>
           <a href="https://www.pinterest.com/anmafridi/">
