--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="content" style="max-width: 2000px; margin-top: 0px;">
       <div class="display-container center">
-        <img src="a.jpg" style="width: 40%;" />
+        <img class="im" src="a.jpg" style="width: 40%;" />
       </div>
 
       <div class="container content center padding-5" style="max-width: 800px;">
