--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         </div>
         <p class="justify">
           Studies B.Sc(Engg) in ECE at Khulna University of Engineering &
-          Technology(KUET) || RUMC ❤❤ || UHSC ❤❤ || Wish me on 3rd May 🎂😊
+          Technology(KUET) || RUMC ❤❤ || UHSC ❤❤ || HSC'17 || Wish me on 3rd May
+          🎂😊
         </p>
       </div>
 
