--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
           <a href="https://www.snapchat.com/add/ahshanto">
             <i class="fa fa-snapchat hover-opacity"></i
           ></a>
+          <a
+            href="https://open.spotify.com/user/31xgmvxhp3xds5ndkspjsf6el3sy?si=NyFKBqqYRpO_5ZtzUIxQLA"
+          >
+            <i class="fa fa-spotify hover-opacity"></i
+          ></a>
 
           <a href="https://twitter.com/ANMAfridiHaque1">
             <i class="fa fa-twitter hover-opacity"></i
