--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <a href="https://www.instagram.com/_a_afridi_/">
             <i class="fa fa-instagram hover-opacity"></i
           ></a>
+
           <a href="https://www.snapchat.com/add/ahshanto">
             <i class="fa fa-snapchat hover-opacity"></i
           ></a>
@@ -41,19 +42,19 @@
             <i class="fa fa-spotify hover-opacity"></i
           ></a>
 
-          <a href="https://twitter.com/ANMAfridiHaque1">
+          <!-- <a href="https://twitter.com/ANMAfridiHaque1">
             <i class="fa fa-twitter hover-opacity"></i
           ></a>
           <a href="https://www.pinterest.com/anmafridi/">
             <i class="fa fa-pinterest-p hover-opacity"></i>
-          </a>
+          </a> -->
           <a href="https://www.linkedin.com/in/a-n-m-afridi-haque-708a84184/">
             <i class="fa fa-linkedin hover-opacity"></i
           ></a>
         </div>
         <p class="justify">
           Studies B.Sc(Engg) in ECE at Khulna University of Engineering &
-          Technology(KUET) || RUMC ❤❤ || UHSC ❤❤ || HSC'17 || Wish me on 3rd May
+          Technology(KUET) || RUMC ❤❤ || UHSC ❤❤ || HSC'17 ||Wish me on 3rd May
           🎂😊
         </p>
       </div>
